--- a/ansible/web-server.yml
+++ b/ansible/web-server.yml
@@ -21,17 +21,6 @@
       file:
         path: /home/ec2-user/git
         state: directory
-
-    - name: Git init
-      command: git init
-      args:
-        chdir: /home/ec2-user/git
-
-    - name: Clone the repository
-      git:
-        repo: https://github.com/freddypaxton/web-server-project.git
-        dest: /home/ec2-user/git/
-        clone: yes
     
     - name: Creates directory
       file:
@@ -42,6 +31,11 @@
       copy: 
         src: /home/ec2-user/git/web-server-project/ansible/index.html
         dest: /var/www/si-webserver
+
+    - name: Copy nginx.conf
+      copy: 
+        src: /home/ec2-user/git/web-server-project/ansible/nginx.conf
+        dest: /etc/nginx
 
     - name: Copy to config sites available
       copy:
